--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -24,10 +24,10 @@ layout:
 * Übersetzungen für die Giveawaynachrichten, Umfragen und Makemyday hinzugefügt
 * Bei den AI-Commands werden jetzt nur noch bestimmte, festgelegte Commands übersetzt
 * Die Convert Commands so angepasst, dass sie übersetzt werden können
-* Beim `/utility emojipicker` Command sind die "Als Emoji hinzufügen"- und "Als Sticker hinzufügen"-Buttons jetzt nicht mehr ausgegraut, wenn man nicht die benötigten Rechte hat, um diese zu drücken, es wird aber eine Fehlermeldung angezeigt, wenn man drauf drückt
+* Beim `/utility emojipicker` Command sind die "Als Emoji hinzufügen"- und "Als Sticker hinzufügen"-Buttons jetzt nicht mehr ausgegraut, wenn man nicht die benötigten Rechte hat, um diese zu drücken, es wird aber eine Fehlermeldung angezeigt, wenn man es anklickt
 * Beim `/utility emojipicker` Command kann jetzt nur noch die Person, die den Command eingegeben hat, die Seite wechseln
-* Beim `/info aktivitätsinfo` Command wird die "Ich bin vorraussichtlich fertig in..."-Nachricht jetzt nicht mehr in dem Kanal angezeigt, der durchsucht wird, sondern in dem Kanal, in dem man den Command ausgeführt hat
+* Beim `/info aktivitätsinfo` Command wird die "Ich bin voraussichtlich fertig in..."-Nachricht jetzt nicht mehr in dem Kanal angezeigt, der durchsucht wird, sondern in dem Kanal, in dem man den Command ausgeführt hat
 * Den Fehler behoben, dass der `/feedback` Command nicht existiert
 * Wenn man in Wortkette ein Komma eingibt, wird danach jetzt kein Leerzeichen mehr gesetzt
-* Den `/entfernen boosterrewards` hinzugefügt
+* Den `/entfernen boosterrewards` Command hinzugefügt
 * Weitere Übersetzungen hinzugefügt und dafür gesorgt, dass Texte (vorrübergehend) nur noch in Englisch übersetzt werden können
