Änderungen bis 28.08 21:40 hinzugefügt

--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -31,3 +31,5 @@ layout:
 * Wenn man in Wortkette ein Komma eingibt, wird danach jetzt kein Leerzeichen mehr gesetzt
 * Den `/entfernen boosterrewards` Command hinzugefügt
 * Weitere Übersetzungen hinzugefügt und dafür gesorgt, dass Texte (vorrübergehend) nur noch in Englisch übersetzt werden können
+* Wenn man Tanjun auf einen Server einlädt, bekommt die einladende Person jetzt Informationen zu den Übersetzungen per DM zugesendet
+* Rechtschreibfehler in `/utility emojipicker` behoben
