Änderungen bis 29.08 16:09 hinzugefügt

--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -33,3 +33,7 @@ layout:
 * Weitere Übersetzungen hinzugefügt und dafür gesorgt, dass Texte (vorrübergehend) nur noch in Englisch übersetzt werden können
 * Wenn man Tanjun auf einen Server einlädt, bekommt die einladende Person jetzt Informationen zu den Übersetzungen per DM zugesendet
 * Rechtschreibfehler in `/utility emojipicker` behoben
+* 2 weitere Übersetzungsfehler behoben
+* Den Text "würdest du ehr" zu "würdest du eher" geändert
+* Berechtigungen für die Admin Commands angepasst
+* Bei `/g start` die Emojis im Dropdown geändert
