--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -37,3 +37,4 @@ layout:
 * Den Text "würdest du ehr" zu "würdest du eher" geändert
 * Berechtigungen für die Admin Commands angepasst
 * Bei `/g start` die Emojis im Dropdown geändert
+* Den Text "<mark style="background-color:red;">r</mark>olle den Rick über jemanden" zu "<mark style="background-color:green;">R</mark>olle den Rick über jemanden" geändert
