Änderungen bis 29.08. 18:27 hinzugefügt

--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -38,3 +38,4 @@ layout:
 * Berechtigungen für die Admin Commands angepasst
 * Bei `/g start` die Emojis im Dropdown geändert
 * Den Text "<mark style="background-color:red;">r</mark>olle den Rick über jemanden" zu "<mark style="background-color:green;">R</mark>olle den Rick über jemanden" geändert
+* Bei den Statistiken "Mitglieder" und "User" getauscht
