Änderungen bis 30.08. 20:54 hinzugefügt

--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -39,3 +39,6 @@ layout:
 * Bei `/g start` die Emojis im Dropdown geändert
 * Den Text "<mark style="background-color:red;">r</mark>olle den Rick über jemanden" zu "<mark style="background-color:green;">R</mark>olle den Rick über jemanden" geändert
 * Bei den Statistiken "Mitglieder" und "User" getauscht + Commandnamen `/stats user` / `/stats mitglieder` getauscht
+* Den Fehler behoben, dass die Makemyday Übersetzung immer Englisch ist und, dass die Übersetzung beim ersten Sendedurchlauf gar nicht funktioniert
+* Emoji in `/help` geändert
+* Die Beschreibung des `/admin rollenemoji` Commands geändert
