Änderungen bis 01.09. 18:29 hinzugefügt

--- a/changelog/2023-09/03.md
+++ b/changelog/2023-09/03.md
@@ -42,3 +42,5 @@ layout:
 * Den Fehler behoben, dass die Makemyday Übersetzung immer Englisch ist und, dass die Übersetzung beim ersten Sendedurchlauf gar nicht funktioniert
 * Emoji in `/help` geändert
 * Die Beschreibung des `/admin rollenemoji` Commands geändert
+* Man kann beim `/utility translate` jetzt optional die Ausgangssprache angeben, was für ein genaueres Übersetzungsergebnis sorgt
+* Übersetzungen funktionieren jetzt so, wie sie sollen
