Pokémon Discord Invite Link aktualisiert

--- a/changelog/2023-04/23.md
+++ b/changelog/2023-04/23.md
@@ -19,7 +19,7 @@ layout:
 * Ergebnis im Taschenrechner wird jetzt oben in dem Anzeigefeld angezeigt, bis man was anderes eingibt
 * Timeout für alle Buttons, Dropdowns etc. auf 10 Stunden gesetzt (Bedeutet: Man kann erst nach 10 Stunden nicht mehr auf die Elemente drücken)
 * Fehler in Make My Day behoben, dass die Nachricht jede Minute gesendet wird
-* Auf dem [Pokémon Server](https://r.arion2000.xyz/discord/pokemon/invite/vanity) ist jetzt bei Make my day der bekannte Banner im Embed
+* Auf dem [Pokémon Server](https://discord.arion2000.xyz/api/discord) ist jetzt bei Make my day der bekannte Banner im Embed
 * Automatische Veröffentlichung von Nachrichten bei Make my day hinzugefügt, falls diese in einem Ankündigungskanal gesendet werden
 * [icanhazdadjoke.com](https://icanhazdadjoke.com/) als Möglichkeit für Make My Day als Dadjoke des Tages hinzugefügt
 * In der Lognachricht für "Kanal aktualisiert" wird jetzt Beschreibung des Textkanals vorher und nachher angezeigt
@@ -46,7 +46,7 @@ layout:
 * Fehler in Idlebanker behoben
 * in Idlebanker wird das Hauptembed jetzt auch aktualisiert, wenn man jemanden upgraded
 * Upgradebutton von Idlebanker wird jetzt alle 30 Minuten neu erstellt, damit er nicht timeoutet
-* Die ganzen Reaktionen kommen nur noch im Chat auf dem [Pokémon Server](https://r.arion2000.xyz/discord/pokemon/invite/vanity)
+* Die ganzen Reaktionen kommen nur noch im Chat auf dem [Pokémon Server](https://discord.arion2000.xyz/api/discord)
 * Im Rechner kann man jetzt auf andere Seiten wechseln, wenn man eine Kommazahl geschrieben hat
 * Beim "/randomuser" Befehl können keine Bots mehr kommen
 * Im Counting-Kanal schaue ich mir jetzt die letzte Nachricht an. Wenn diese passt, wird die Nachricht nicht gelöscht. Zum Beispiel: Laut dem Bot müsste die nächste Nachricht die 125 haben. Die letzte Nachricht im Counting-Kanal ist jedoch bereits 126. Das bedeutet wahrscheinlich, dass der Bot zwischenzeitlich offline war. In diesem Fall zählt auch die 127 als die richtige Antwort.
