--- a/changelog/2023-04/30.md
+++ b/changelog/2023-04/30.md
@@ -31,7 +31,7 @@ layout:
 * "9 Image" Befehle eingebaut
 * Quizsystem eingebaut
 * Mit "/birthday shownext" kann man sich jetzt die nächsten Geburtstage anzeigen lassen
-* Im Changelog (auf dem [Pokémon Discord Server](https://r.arion2000.xyz/discord/pokemon/invite/vanity)) nach jeder Änderung eine freie Zeile gemacht, damit es (hoffentlich) übersichtlicher ist
+* Im Changelog (auf dem [Pokémon Discord Server](https://discord.arion2000.xyz/api/discord)) nach jeder Änderung eine freie Zeile gemacht, damit es (hoffentlich) übersichtlicher ist
 * Beim Erstellen von Umfragen kann man jetzt optional einen Ping angeben
 * Beim Erstellen von Giveaways kann man jetzt optional einen Ping angeben
 * In der "shownextbirthdays"-Nachricht sind die Buttons zum Seiten wechseln jetzt nur vorhanden, wenn es mehr als eine Seite gibt
