Fix text styling mistake

--- a/changelog/v0.1.0.md
+++ b/changelog/v0.1.0.md
@@ -24,10 +24,7 @@ Tanjun bietet nun eine Reihe neuer Commands, welche die Administration eurer Ser
 * `deleterole` - Lösche eie Rolle
 * `kick` - Kicke ein Mitglied
 * `ban` - Banne ein Mitglied
-
-<!---->
-
-* `unban` - `Entbanne ein Mitglied`
+* `unban` - Entbanne ein Mitglied
 * `timeout` - Schicke ein Mitglied in Timeout (beliebige Dauer möglich!)
 * `removetimeout` - Entlasse ein Mitglied aus dem Timeout
 * `purge` - Lösche eine bestimmte Anzahl an Nachrichten aus einem Kanal
