Fix spelling in v0.1.0.md

--- a/changelog/v0.1.0.md
+++ b/changelog/v0.1.0.md
@@ -76,9 +76,11 @@ Standardmäßig laufen die Verwarnungen nicht ab und bleiben dauerhaft gespeiche
 
 Auch wenn der `Nuke`-Befehl erstmal nur sehr gefährlich klingt, kann er in bestimmten Situationen sehr nützlich sein. Mit diesem Befehl hat man die Möglichkeit, alle Nachrichten in einem Kanal auf einmal zu löschen, indem der Bot eine exakte Kopie des Kanals anfertigt und das Original löscht.
 
-Hierfür auch ein Video zur Veranschalichung:
+Hierfür auch ein Video zur Veranschaulichung:
 
 {% embed url="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FkxqAE1ifXfn1iwkp233g%2Fuploads%2FXC71iXTGTQmjXxQSpkXm%2Fclearchannel_showcase.mp4?alt=media&token=ac519282-0d9b-4d20-9b69-3f9c8be33109" %}
+Funktionsweise des Nuke-Befehls
+{% endembed %}
 
 ### `Createemoji`-Befehl
 
