--- a/c/v0.4.0.md
+++ b/c/v0.4.0.md
@@ -67,10 +67,10 @@ In dieser Tanjun Version findet ein neues Levelsystem in Tanjun Einzug - und die
 
 Die Schwierigkeit des Levelsystems sagt aus, wie sehr die XP-Anforderung von Level zu Level höher wird. Standardmäßig gibt es 4 Schwierigkeiten:
 
-* Einfach: $100 * Level$
-* Mittel: $100 * (Level^{1,5})$
-* Schwer: $100 * (Level^2)$
-* Extrem: $100 * (Level^{2,5})$
+* Einfach: $$100 * Level$$
+* Mittel: $$100 * (Level^{1,5})$$
+* Schwer: $$100 * (Level^2)$$
+* Extrem: $$100 * (Level^{2,5})$$
 
 Falls ihr mit dem Formeln nichts anfangen könnt, kann der Bot auch automatisch die XP-Anforderung für Level berechnen.
 
