--- a/c/v0.4.0.md
+++ b/c/v0.4.0.md
@@ -67,16 +67,18 @@ In dieser Tanjun Version findet ein neues Levelsystem in Tanjun Einzug - und die
 
 Die Schwierigkeit des Levelsystems sagt aus, wie sehr die XP-Anforderung von Level zu Level höher wird. Standardmäßig gibt es 4 Schwierigkeiten:
 
-* Einfach: $$100 * Level$$
-* Mittel: $$100 * Level^{1,5}$$
-* Schwer: $$100 * Level^2$$
-* Extrem: $$100 * Level^{2,5}$$
+* Einfach: $$100 * \text{Level}$$
+* Mittel: $$100 * \text{Level}^{1,5}$$
+* Schwer: $$100 * \text{Level}^2$$
+* Extrem: $$100 * \text{Level}^{2,5}$$
 
 Falls ihr mit dem Formeln nichts anfangen könnt, kann der Bot auch automatisch die XP-Anforderung für Level berechnen.
 
 <figure><img src="../.gitbook/assets/xpscaling_preview.png" alt=""><figcaption></figcaption></figure>
 
 Außerdem kann man eine **komplett** eigene Formel einfügen. - Das Levelsystem ist also individuell anpassbar, sodass es auf eurem Server einzigartig ist. :thumbsup:
+
+## 
 
 ## Tanjun-Tester
 
