--- a/en/c/v0.1.0.md
+++ b/en/c/v0.1.0.md
@@ -1,5 +1,5 @@
 ---
-description: Wir haben uns dazu entschieden, Tanjun (mal wieder) komplett neu zu schreiben. Die Version 0.1.0 ist jetzt die erste neue Tanjun-Version! 🥳
+description: We have decided to completely rewrite Tanjun (once again). Version 0.1.0 is now the first new Tanjun version! 🥳
 icon: message-pen
 layout:
   title:
@@ -16,62 +16,62 @@ layout:
 
 # v0.1.0
 
-## Traditionelle Befehle & Slash-Commands
+## Traditional commands & slash commands
 
-In den kommenden Tanjun-Versionen werden nun sowohl traditionelle Befehle mit einem Präfix als auch die Slash-Commands unterstützt. So habt ihr die Möglichkeit, einfach das zu verwenden, was ihr angenehmer findet.
+In the upcoming Tanjun versions, both traditional commands with a prefix and the slash commands will be supported. This gives you the option of simply using what you find more convenient.
 
-## Neue Admin-Befehle
+## New admin commands
 
-Tanjun bietet nun eine Reihe neuer Commands, welche die Administration eurer Server erleichtern! Besonders auf Mobilgeräten ist die Verwaltung einiger Servereinstellungen in Discord eher nervig als praktisch. Mit diesen neuen Commands wird einiges einfacher.
+Tanjun now offers a number of new commands that make the administration of your servers easier! Especially on mobile devices, managing some server settings in Discord is more annoying than practical. These new commands make things a lot easier.
 
 <details>
 
-<summary>Hier einmal alle bisher verfügbaren Commands:</summary>
+<summary>Here are all the commands available so far:</summary>
 
-- `addrole` - Gebe einem Mitglied eine Rolle
-- `removerole` - Entferne eine Rolle von einem Mitglied
-- `createrole` - Erstelle eine Rolle
-- `deleterole` - Lösche eie Rolle
-- `kick` - Kicke ein Mitglied
-- `ban` - Banne ein Mitglied
-- `unban` - Entbanne ein Mitglied
-- `timeout` - Schicke ein Mitglied in Timeout (beliebige Dauer möglich!)
-- `removetimeout` - Entlasse ein Mitglied aus dem Timeout
-- `purge` - Lösche eine bestimmte Anzahl an Nachrichten aus einem Kanal
-- `nickname` - Ändere den Nicknamen eines Mitglieds
-- `slowmode` - Lege den Slowmodus für einen Kanal fest (beliebige Dauer möglich!)
-- `lock` - Sperre einen Kanal
-- `unlock` - Entsperre einen Kanal
-- `warn` - Verwarne ein Mitglied
-- `viewwarns` - Liste die Verwarnungen eines Mitglieds auf
-- `nuke` - Lösche **alle** Nachrichten aus einem Kanal, indem er neu erstellt wird
-- `say` - Lass den Bot eine bestimmte Nachricht schreiben :eyes:
-- `embed` - Sende ein Embed
-- `createemoji` - Lade ein Emoji hoch
+- `addrole` - Give a member a role
+- `removerole` - Remove a role from a member
+- `createrole` - Create a role
+- `deleterole` - Delete a role
+- `kick` - Kick a member
+- `ban` - Ban a member
+- `unban` - Unban a member
+- `timeout` - Send a member to timeout (any duration possible!)
+- `removetimeout` - Release a member from timeout
+- `purge` - Delete a certain number of messages from a channel
+- `nickname` - Change the nickname of a member
+- `slowmode` - Set the slow mode for a channel (any duration possible!)
+- `lock` - Lock a channel
+- `unlock` - Unlock a channel
+- `warn` - Warn a member
+- `viewwarns` - List the warnings of a member
+- `nuke` - Delete **all** messages from a channel by recreating it
+- `say` - Let the bot write a specific message :eyes:
+- `embed` - Send an embed
+- `createemoji` - Upload an emoji
 
 </details>
 
-Ein paar Befehle haben wir noch einmal etwas genauer erklärt:
+We have explained a few commands in more detail:
 
-### `Lock`- und `Unlock`-Befehle
+### `Lock` and `Unlock` commands
 
-Mit diesen beiden Befehlen könnt ihr Mitglieder entweder daran hindern, in einem Kanal Nachrichten zu schreiben oder das Schreiben von Nachrichten wieder erlauben.
+With these two commands you can either prevent members from writing messages in a channel or allow them to write messages again.
 
-Wenn der `Lock`-Befehl ausgeführt wird, wird von @everyone und allen zusätzlichen Rollen und Mitgliedern die `Nachrichten senden`-Berechtigung auf ❌ gesetzt. So kann niemand (außer Administratoren) mehr in dem Kanal schreiben. Durch den `Unlock`-Befehl wird der Zustand vor dem Sperren wiederhergestellt (wer vor dem Sperren nicht schreiben durfte, darf es danach auch nicht).
+When the `Lock` command is executed, @everyone and all additional roles and members set the `Send messages` authorization to ❌. This means that nobody (except administrators) can write in the channel. The `Unlock` command restores the status before the lock (anyone who was not allowed to write before the lock is not allowed to write afterwards either).
 
-Hier ein Video zur Veranschaulichung der beiden Commands:
+Here is a video to illustrate the two commands:
 
 {% embed url="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FkxqAE1ifXfn1iwkp233g%2Fuploads%2FeTju7UQpdv4oHAaPSrZQ%2FCrYFAxJ233.mp4?alt=media&token=1e64d6c5-f85a-4a92-9864-0d07550e6557" %}
-Funktionsweise der Lock- und Unlock-Befehle
+How the lock and unlock commands work
 {% endembed %}
 
-### `Warn`- und `Viewwarn`-Befehle
+### `Warn` and `Viewwarn` commands
 
-Mit dem `Warn`-Befehl kann man Mitglieder verwarnen. Die verwarnte Person bekommt dann eine DM[^1] (wenn der Bot dieser Person DMs[^2] senden kann). Alle bisherigen Verwarnungen für ein Mitglied kann man sich über den `Viewwarns`-Befehl anzeigen lassen.
+The `Warn` command can be used to warn members. The warned person then receives a DM[^1] (if the bot can send DMs[^2] to this person). All previous warnings for a member can be displayed using the `Viewwarns` command.
 
-Standardmäßig laufen die Verwarnungen nicht ab und bleiben dauerhaft gespeichert. Außerdem gibt es standardmäßig keine Aktionen, die bei einer bestimmten Anzahl an Verwarnungen ausgeführt werden. Dies soll man aber zukünftig einstellen können.
+By default, the warnings do not expire and remain permanently saved. In addition, there are no actions by default that are executed after a certain number of warnings. However, it should be possible to set this in the future.
 
-### `Nuke`-Befehl
+### `Nuke` command
 
 Auch wenn der `Nuke`-Befehl erstmal nur sehr gefährlich klingt, kann er in bestimmten Situationen sehr nützlich sein. Mit diesem Befehl hat man die Möglichkeit, alle Nachrichten in einem Kanal auf einmal zu löschen, indem der Bot eine exakte Kopie des Kanals anfertigt und das Original löscht.
 
